fixed overlap of slider and previous section image on desktop mode

--- a/wp-content/themes/wecreate/resources/assets/src/sass/base/_mixins.scss
+++ b/wp-content/themes/wecreate/resources/assets/src/sass/base/_mixins.scss
@@ -6,6 +6,12 @@
     }
 }
 
+@mixin desktop-only() {
+    @media only screen and (min-width: 1200px) {
+        @content;
+    }
+}
+
 @mixin tablet() {
     @media only screen and (max-width: 1199px) and (min-width: 1px) {
         @content;
