--- a/wp-content/themes/wecreate/resources/assets/src/sass/layouts/_home.scss
+++ b/wp-content/themes/wecreate/resources/assets/src/sass/layouts/_home.scss
@@ -390,14 +390,13 @@
                     }
                     @include mobile {
                         a.button-links {
-                            padding:10px 13px!important
+                            padding: 10px 13px!important
                         }
                     }
                 }
             }
         }
     }
-
     // hide the arrow on sliders for smaller screens
     @include tablet {
         .flickity-button {
@@ -427,7 +426,6 @@
                 padding-bottom: 100px;
             }
         }
-
         z-index: 1;
         display: flex;
         flex-direction: column;
@@ -561,9 +559,7 @@
                     left: 18%;
                 }
             }
-
-            &:nth-child(1)
-            {
+            &:nth-child(1) {
                 .content-wrapper {
                     margin-top: 50px!important;
                 }
@@ -597,13 +593,10 @@
             }
         }
     }
-
     @include mobile {
         .work:first-of-type {
-            .work-content-wrapper
-            {
-                .content-wrapper
-                {
+            .work-content-wrapper {
+                .content-wrapper {
                     margin-top: 50px!important;
                 }
             }
@@ -616,12 +609,15 @@
     flex-direction: column;
     overflow: hidden;
     @include mobile-padding;
+    @include desktop-only {
+        margin-top: 45px;
+    }
     height: 430px;
     @media (max-width: 600px) {
         height: 480px;
     }
     h1 {
-        @include mobile  {
+        @include mobile {
             text-align: center;
         }
     }
@@ -630,7 +626,7 @@
         .customer {
             width: 555px;
             margin: 0 35px;
-            @include mobile  {
+            @include mobile {
                 width: 100%;
                 margin: 0 auto;
             }
@@ -639,7 +635,7 @@
                 width: 180px;
                 height: 283px;
                 object-fit: cover;
-                @include mobile  {
+                @include mobile {
                     height: 175px;
                     width: 110.28px;
                 }
@@ -647,7 +643,7 @@
             .customer-content {
                 padding-left: 60px;
                 position: relative;
-                @include mobile  {
+                @include mobile {
                     padding-left: 20px;
                 }
                 h3 {
@@ -661,7 +657,7 @@
                     position: absolute;
                     top: 4px;
                     left: 6px;
-                    @include mobile  {
+                    @include mobile {
                         display: none;
                     }
                 }
@@ -669,7 +665,8 @@
         }
         .flickity-page-dots {
             @include mobile {
-                .dot, .dot.is-selected {
+                .dot,
+                .dot.is-selected {
                     height: 11.5px;
                     width: 11.5px;
                 }
